--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [linux/amd64, linux/arm64]
+        platform: [linux/arm64]
         target: [slurmctld, slurmd, slurmdbd, slurmrestd, sackd, slurm]
     steps:
       - name: Checkout Code
